5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1618_2935.log
== TEST (2019-04-02 10:13:35) 
-- CODE:
a = float(input("massa em kg do caminhao A: "))
b = float(input("massa em kg do caminhao B: "))
c = float(input("velocidade em m/s do caminhao B: "))

Vf = ((2*(a+b))/(a+b)) * c

print(round, 15)

-- OUTPUT:
<built-in function round> 15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:14:53) 
-- CODE:
a = float(input("massa em kg do caminhao A: "))
b = float(input("massa em kg do caminhao B: "))
c = float(input("velocidade em m/s do caminhao B: "))

Vf = ((2*(a+b))/(a+b)) * c

print(round(Vf, 15)

-- ERROR:
File "XXXX", line 8
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:15:04) 
-- CODE:
a = float(input("massa em kg do caminhao A: "))
b = float(input("massa em kg do caminhao B: "))
c = float(input("velocidade em m/s do caminhao B: "))

Vf = ((2*(a+b))/(a+b)) * c

print(round(Vf, 15))

-- OUTPUT:
17.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:19:51) 
-- CODE:
a = float(input("massa em kg do caminhao A: "))
b = float(input("massa em kg do caminhao B: "))
c = float(input("velocidade em m/s do caminhao B: "))

Va = c * 2

Vf1 = ((2*(a+b))/(a+b)) * c

Vf2 = ((2*(a+b))/(a+b)) * va

print(round(Vf2-Vf1, 15))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    Vf2 = ((2*(a+b))/(a+b)) * va
NameError: name 'va' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:20:32) 
-- CODE:
a = float(input("massa em kg do caminhao A: "))
b = float(input("massa em kg do caminhao B: "))
c = float(input("velocidade em m/s do caminhao B: "))

Va = c * 2

Vf1 = ((2*(a+b))/(a+b)) * c

Vf2 = ((2*(a+b))/(a+b)) * Va

print(round(Vf2-Vf1, 15))

-- OUTPUT:
17.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:40:00) 
-- CODE:
a = float(input("massa em kg do caminhao A: "))
b = float(input("massa em kg do caminhao B: "))
c = float(input("velocidade em m/s do caminhao B: "))

Va = c * 2

Vf1 = ((2*(a+b))/(a+b)) * c

Vf2 = ((2*(a+b))/(a+b)) * Va

print(round(Vf2/Vf1, 15))

-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:41:09) 
-- CODE:
a = float(input("massa em kg do caminhao A: "))
b = float(input("massa em kg do caminhao B: "))
c = float(input("velocidade em m/s do caminhao B: "))



Vf1 = ((2*(a+b))/(a+b)) * (c?2) 


print(round(Vf1, 15))

-- ERROR:
File "XXXX", line 7
    Vf1 = ((2*(a+b))/(a+b)) * (c?2) 
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:41:15) 
-- CODE:
a = float(input("massa em kg do caminhao A: "))
b = float(input("massa em kg do caminhao B: "))
c = float(input("velocidade em m/s do caminhao B: "))



Vf1 = ((2*(a+b))/(a+b)) * (c/2) 


print(round(Vf1, 15))

-- OUTPUT:
8.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:42:47) 
-- CODE:
a = float(input("massa em kg do caminhao A: "))
b = float(input("massa em kg do caminhao B: "))
c = float(input("velocidade em m/s do caminhao B: "))

Vo = c / 2

Vf1 = ((2*(a+b))/(a+b)) * Vo 


print(round(Vf1, 15))

-- OUTPUT:
8.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:43:03) 
-- CODE:
a = float(input("massa em kg do caminhao A: "))
b = float(input("massa em kg do caminhao B: "))
c = float(input("velocidade em m/s do caminhao B: "))

Vo = c / 2

Vf1 = ((2*(a+b))/(a+b)) * Vo 


print(round(Vf1, 15))

-- OUTPUT:
8.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:46:31) 
-- CODE:
a = float(input("massa em kg do caminhao A: "))
b = float(input("massa em kg do caminhao B: "))
c = float(input("velocidade em m/s do caminhao B: "))



Vf1 = ((2*(a+b))/(a+b)* 40 )

Vf2 = ((2*(a+b))/(a+b)* 20 ) 

vf = (Vf1 - Vf2)

print(round(vf, 15))

-- OUTPUT:
40.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:47:46) 
-- CODE:
a = float(input("massa em kg do caminhao A: "))
b = float(input("massa em kg do caminhao B: "))
c = float(input("velocidade em m/s do caminhao B: "))



Vf1 = ((2*(a+b))/(a+b)* 40 )

Vf2 = ((2*(a+b))/(a+b)* 20 ) 

vf = (Vf2 - Vf1)

print(round(vf, 15))

-- OUTPUT:
-40.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:49:03) 
-- CODE:
a = float(input("massa em kg do caminhao A: "))
b = float(input("massa em kg do caminhao B: "))
c = float(input("velocidade em m/s do caminhao B: "))


Vf = ((2*(a+b))/(a+b)* c )


print(vf)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(vf)
NameError: name 'vf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:49:18) 
-- CODE:
a = float(input("massa em kg do caminhao A: "))
b = float(input("massa em kg do caminhao B: "))
c = float(input("velocidade em m/s do caminhao B: "))


Vf = ((2*(a+b))/(a+b)* c )


print(Vf)

-- OUTPUT:
17.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:50:34) 
-- CODE:
a = float(input("massa em kg do caminhao A: "))
b = float(input("massa em kg do caminhao B: "))
c = float(input("velocidade em m/s do caminhao B: "))


Vf = (((2*a)+b)/(a+b)) * c 


print(Vf)

-- OUTPUT:
10.793225305981728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:50:45) 
-- CODE:
a = float(input("massa em kg do caminhao A: "))
b = float(input("massa em kg do caminhao B: "))
c = float(input("velocidade em m/s do caminhao B: "))


Vf = (((2*a)+b)/(a+b)) * c 


print(Vf)

-- EXECUTION TIME:
0.14137
-- TEST CASE 1:
---- input:
123.4
456.7
8.9
---- correct output:
10.793225305981728
---- user output:
10.793225305981728
-- TEST CASE 2:
---- input:
1000.0
5000.0
100.0
---- correct output:
116.66666666666667
---- user output:
116.66666666666667
-- TEST CASE 3:
---- input:
4000.0
6000.0
100.0
---- correct output:
140.0
---- user output:
140.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
